added all thing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="back">
-        <div>
+        <div class="middle">
             <h1 class="heading">Lets Help Those Who Are More In Need</h1>
             <p class="paragraph">Many people of Sylhet suffering for flood.More than 72 percent of Sylhet division is
                 under
@@ -22,7 +22,43 @@
                 districts in Sylhet division 89 percent area of Sunamganj, 72 percent of Sylhet.</p>
             <button class="btn">Donate Now</button>
         </div>
+
     </div>
+    <section class="everything">
+        <div class="text">
+            <h2>Donate Today</h2>
+            <p>
+                <small class="half">Water level in the Surma and Kushiyara rivers receding at four points provided some
+                    relief to
+                    people in
+                    flood affected areas of Sylhet and Sunamganj but they are afraid of more rain and long-term
+                    waterlogging.</small>
+            </p>
+        </div>
+        <div class="box">
+            <div class="one">
+                <h3>100tk</h3>
+            </div>
+            <div class="two">
+                <h3>200tk</h3>
+            </div>
+            <div class="three">
+                <h3>500tk</h3>
+            </div>
+            <div class="four">
+                <h3>1000tk</h3>
+            </div>
+            <div class="five">
+                <h3>5000tk</h3>
+            </div>
+        </div>
+        <div class="donate">
+            <input placeholder="other amount(taka)"></input>
+
+        </div>
+        <button class="button">Donate now</button>
+
+    </section>
 </body>
 
 </html>
