--- a/index.html
+++ b/index.html
@@ -59,6 +59,53 @@
         <button class="button">Donate now</button>
 
     </section>
+    <section class="thirty">
+        <div class="thirty1">
+            <h2>Our Donate Plan</h2>
+            <p>
+                <small class="thirty3">Our team will handout relief packages to affect homes which includes food packs
+                    and boats for
+                    essential
+                    travelling.
+                    We plan to help the most vulnerable people to access nutritious food and essential items as soon as
+                    possible.</small>
+            </p>
+        </div>
+        <div class="card-plus">
+            <div class="card1">
+                <img class="picture3" src="helpless-image/food.png" alt="">
+                <h3 class="h1">Food for a family</h3>
+                <p class="p3">
+                    <small>We will ensure food for the effected people of Sylhet. Because without food we cannot live.
+                        we
+                        will do our best to reach every effected family so that they can get food from us</small>
+                </p>
+            </div>
+            <div class="card2">
+                <img class="picture2" src="helpless-image/shelter.png" alt="">
+                <h3 class="h2">Shelter for a family</h3>
+                <p class="p2">
+                    <small>We will ensure shelter for the effected people of Sylhet. Because without shelter we cannot
+                        live.
+                        we
+                        will do our best to reach every effected family so that they can get help from us and we will do
+                        steps for shelter</small>
+                </p>
+            </div>
+            <div class="card3">
+                <img class="picture" src="helpless-image/icon4.svg" alt="">
+                <h3 class="h3">Education for a family</h3>
+                <p class="p1">
+                    <small>We will ensure education for the effected people of Sylhet. Because without education we
+                        cannot
+                        acheve success in life. we
+                        will do our best to reach every effected family so that they can get help from us we will take
+                        steps
+                        for children first</small>
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
