added all projects

--- a/index.html
+++ b/index.html
@@ -106,6 +106,59 @@
             </div>
         </div>
     </section>
+    <secion>
+        <div class="donate">
+            <div class="donate1">
+                <h2>Their lives depends on your donation</h2>
+                <p> Sylhet is currently drowning due to heavy floods and many people are left without electricity and
+                    resources. Majority of Sylhet has been heavily affected and businesses are facing a huge loss due to
+                    their inventory getting destroyed. People are starving because they are unable to get food and their
+                    homes are being demolished by the heavy flooding. For many, their businesses are their only source
+                    of
+                    income and majority of it is completely wiped out. We are raising money to send over to people who
+                    can
+                    distribute the money to the individuals who need it the most. that time we should help them by
+                    donation
+                </p>
+                <button class="color">How to contribute?</button>
+            </div>
+            <div><img class="donate2" src="helpless-image/donation0.jpg" alt=""></div>
+        </div>
+    </secion>
+    <secion>
+        <div class="eight">
+            <div><img class="elaven" src="helpless-image/donation12.png" alt=""></div>
+            <div class="nine">
+                <h2 class="align">They need us to survive</h2>
+                <p> Many areas of Sylhet city have gone under water again because of another round of flooding in a span
+                    of one month, with water continuing to rise, leading to fears of prolonged suffering for flood
+                    victims.
+
+                    Houses and business organisations in different areas of Sylhet city including Shahjalal Uposhohor,
+                    Teroratan, Sobhani Ghat, and Kalighat are submerged, disrupting road communication in the areas.
+
+                    Water has also entered different areas of Sunamganj municipal town. Due to the flooding, many
+                    educational institutions have closed in the district. in that time they need help from us to survive
+
+                </p>
+                <button class="ten">How to contribute?</button>
+            </div>
+        </div>
+    </secion>
+    <section>
+        <div class="fifteen">
+            <div class="sixteen">
+                <h2 class="ninteen">They are helpless</h2>
+                <p> The people of Sylhet are very much helpless. In thir bad time if we cant help them then they will
+                    lose their life for the scarcity of food & shelter. many of the chldren are go without food.various
+                    kinds of diseases attacking them.there the scarecity of pure drinking water.many boys & girls passed
+                    their day without study.So we should hel p them as we can
+                </p>
+                <button class="eighteen">How to contribute?</button>
+            </div>
+            <div><img class="seventeen" src="helpless-image/donation9.jpg" alt=""></div>
+        </div>
+    </section>
 </body>
 
 </html>
