--- a/index.html
+++ b/index.html
@@ -159,6 +159,16 @@
             <div><img class="seventeen" src="helpless-image/donation9.jpg" alt=""></div>
         </div>
     </section>
+    <div class="updates">
+        <h2>Get My Updates</h2>
+        <p class="text5">Already i visited this area. i have seen the destroy of their lives.They are homeless,foodless
+            & helpless.
+            Water is increasing.We all are waiting to look a good situation after flood</p>
+    </div>
+    <div class="subscribe">
+        <input placeholder="Email"></input>
+        <button class="button5">Subscribe</button>
+    </div>
 </body>
 
 </html>
