added full project

--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
         <input placeholder="Email"></input>
         <button class="button5">Subscribe</button>
     </div>
+    <div class="finish">
+        <footer>
+            <h3 class="finish2">Be Humble</h3>
+            <small class="finish1">I am gonna do it</small>
+        </footer>
+    </div>
 </body>
 
 </html>
